[package]
name = "mb-dev"
version = "0.1.12"
authors = ["Max Block <maxblock@pm.me>"]
description = "my dev cli tools"
edition = "2021"
license = "Unlicense"

[dependencies]
dns-lookup = "1.0.8"
clap = { version = "3.2.14", features = ["derive", "cargo"] }
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
serde = { version = "1.0.140", features = ["derive"] }
